added arxiv link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             <span class="link"><a href="https://icml.cc/">ICML 2022 (long talk)</a></span>&nbsp;&nbsp;
             <span class="tag">
-              <a href="diffuser_icml2022.pdf" class="link2">Paper</a>&nbsp;
+              <a href="https://arxiv.org/abs/2205.09991" class="link2">Paper</a>&nbsp;
               <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
               <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
               <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
@@ -289,7 +289,7 @@
             <div>
               <span class="link"><a href="https://icml.cc/">ICML 2022</a></span>&nbsp;&nbsp;
               <span>
-                <a href="diffuser_icml2022.pdf" class="link2">Paper</a>&nbsp;
+                <a href="https://arxiv.org/abs/2205.09991" class="link2">Paper</a>&nbsp;
                 <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
                 <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
                 <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
