--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <meta name="author" content="Michael Janner">
   <meta name="description" content="Diffusion models for reinforcement learning and planning">
-  <meta name="keywords" content="diffusion models, deep, reinforcement learning">
+  <meta name="keywords" content="diffusion models, deep, reinforcement learning, rl">
 
   <script src="files/head.js"></script>
 
