add definition for asterick

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         -moz-border-radius: 5px;
     }
 
+    .note{margin-left:1em;color:#999999;text-decoration:none;font-size:14px}
+
     .libx-tooltip p {
         /* override default 1em margin to keep paragraphs inside a tooltip closer together. */
         margin: .2em;
@@ -153,6 +155,7 @@
               <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
               <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
             </span>
+            <span>(* indicates equal contribution)</span>
           </div>
         </div>
 
