--- a/mobile.html
+++ b/mobile.html
@@ -149,8 +149,10 @@
             <span class="tag">
               <a href="diffuser_icml2022.pdf" class="link2">Paper</a>&nbsp;
               <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
+              <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
               <a href="files/bib.txt" class="link2">BibTex</a>
             </span>
+            <span>(* indicates equal contribution)</span>
           </div>
         </div>
         <br>
