--- a/index.html
+++ b/index.html
@@ -146,19 +146,24 @@
                 <a href="https://cocosci.mit.edu/josh">Joshua Tenenbaum</a>, and
                 <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
             </div>
-            <span class="link"><a href="https://icml.cc/">ICML 2022 (long talk)</a></span>&nbsp;&nbsp;
-            <span class="tag">
-              <a href="https://arxiv.org/abs/2205.09991" class="link2">Paper</a>&nbsp;
-              <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
-              <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
-              <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
-            </span>
+            <div style="margin-top: -0.35em;">
+              <span class="link"><a href="https://icml.cc/">ICML 2022 (long talk)</a></span>&nbsp;&nbsp;
+              <span class="tag">
+                <a href="https://arxiv.org/abs/2205.09991" class="link2">Paper</a>&nbsp;
+                <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
+                <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
+                <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
+              </span>
+            </div>
+          </div>
+          <div style="font-size: 0.75em; margin-top: -0.75em;">
+            <span>*</span>equal contribution
           </div>
         </div>
 
         <br><br>
 
-        <div class="content" style="width: 100%;">
+        <div class="content" style="width: 100%; margin-top: -1em;">
           <div class="title"><b>Planning as denoising</b></div>
           <br>
           <table border=0>
@@ -300,6 +305,9 @@
                 <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
                 <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
               </span>
+            </div>
+            <div style="font-size: 0.75em;">
+              <span>*</span>equal contribution
             </div>
         </div>
 
