--- a/mobile.html
+++ b/mobile.html
@@ -139,20 +139,27 @@
             Planning with Diffusion for Flexible Behavior Synthesis
           </h2>
           <div>
-            <div class="authors">
+            <div class="authors" style="margin-top: -0.25em;">
                 <a href="https://jannerm.github.io/">Janner</a><sup>*</sup>&nbsp;&nbsp;
                 <a href="https://yilundu.github.io/">Du</a><sup>*</sup>&nbsp;&nbsp;
                 <a href="https://cocosci.mit.edu/josh">Tenenbaum</a>&nbsp;&nbsp;
                 <a href="https://people.eecs.berkeley.edu/~svlevine/">Levine</a>
             </div>
-            <span class="link"><a href="https://icml.cc/">ICML 2022 (long talk)</a></span>&nbsp;&nbsp;
-            <span class="tag">
-              <a href="diffuser_icml2022.pdf" class="link2">Paper</a>&nbsp;
-              <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
-              <a href="files/bib.txt" class="link2">BibTex</a>
-            </span>
+            <div style="margin-top: -0.25em;">
+              <span class="link"><a href="https://icml.cc/">ICML 2022 (long talk)</a></span>&nbsp;&nbsp;
+              <span class="tag">
+                <a href="diffuser_icml2022.pdf" class="link2">Paper</a>&nbsp;
+                <a href="https://github.com/jannerm/diffuser" class="link2">Code</a>&nbsp;
+                <a href="files/bib.txt" class="link2">BibTex</a>
+              </span>
+            </div>
           </div>
         </div>
+        <center>
+          <div style="font-size: 0.75em; margin-top: -1.5em;">
+            <span>*</span>equal contribution
+          </div>
+        </center>
         <br>
 
         <center>
@@ -317,6 +324,9 @@
                 <a href="https://colab.research.google.com/drive/1YajKhu-CUIGBJeQPehjVPJcK_b38a8Nc?usp=sharing" class="link2">Colab</a>&nbsp;
                 <a href="files/bib.txt" class="link2">BibTex</a>&nbsp;
               </span>
+            </div>
+            <div style="font-size: 0.75em;">
+              <span>*</span>equal contribution
             </div>
         </div>
 
