--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
         <br>
         <br>
 
-        <div class="video-container">
+<!--         <div class="video-container">
           <center>
             <iframe src="https://drive.google.com/file/d/1FZ9mgPHT3S6Lq2grE_epW5qlstoLS4Yt/preview"
                     width="80%" allow="autoplay"></iframe>
           </center>
-        </div>
+        </div> -->
         <br>
         <br>
 
